--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 	<header>
 		<h1 id="welcome">Games Home Page</h1>
+		<a id="gitHubLink" href="https://github.com/ShaneMarusczak/Games-Home-Page" target="_blank"
+			rel="noreferrer"><img id="githubicon" src="github-icon.jpg"></a>
 	</header>
 	<div id="main">
 		<a href="https://marusczak.com/Battleship-JS/">
