--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</a>
 	</div>
 	<footer>
-		<h2 id="intro">Thanks for stopping by!</h2>
+		<h2 id="thanks">Thanks for stopping by!</h2>
 		<p id="updateText">Last Updated: May 14, 2020</p>
 	</footer>
 </body>
