--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 	</div>
 	<footer>
 		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: June 9, 2020</p>
+		<p id="updateText">Last Updated: June 11, 2020</p>
+		<div id="darkMode">Dark Mode</div>
 	</footer>
 </body>
 <script type="text/javascript" src="home.js"></script>
