--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 				<p class="linkText">Sudoku</p>
 			</div>
 		</a>
+		<a href="https://marusczak.com/Space-Invaders/">
+			<div class="linkBox" id="spaceinvaders">
+				<p class="linkText">Space Invaders</p>
+			</div>
+		</a>
+
 		<a href="https://marusczak.com/Connect-Four/">
 			<div class="linkBox" id="connect4">
 				<p class="linkText">Connect Four</p>
@@ -45,7 +51,7 @@
 	</div>
 	<footer>
 		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: June 11, 2020</p>
+		<p id="updateText">Last Updated: June 18, 2020</p>
 		<div id="darkMode">Dark Mode</div>
 	</footer>
 </body>
