wins/losses on home page v1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<title>Games Home Page</title>
 </head>
+<div id="winloss">
+	<h2 id="battleshipWins"></h2>
+	<h2 id="spaceInvadersWins"></h2>
+</div>
 
 <body>
 	<header>
@@ -22,17 +26,16 @@
 				<p class="linkText">Battleship</p>
 			</div>
 		</a>
-		<a href="https://marusczak.com/Sudoku-Game/">
-			<div class="linkBox" id="sudoku">
-				<p class="linkText">Sudoku</p>
-			</div>
-		</a>
 		<a href="https://marusczak.com/Space-Invaders/">
 			<div class="linkBox" id="spaceinvaders">
 				<p class="linkText">Space Invaders</p>
 			</div>
 		</a>
-
+		<a href="https://marusczak.com/Sudoku-Game/">
+			<div class="linkBox" id="sudoku">
+				<p class="linkText">Sudoku</p>
+			</div>
+		</a>
 		<a href="https://marusczak.com/Connect-Four/">
 			<div class="linkBox" id="connect4">
 				<p class="linkText">Connect Four</p>
@@ -51,7 +54,7 @@
 	</div>
 	<footer>
 		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: June 18, 2020</p>
+		<p id="updateText">Last Updated: June 27, 2020</p>
 		<div id="darkMode">Dark Mode</div>
 	</footer>
 </body>
