--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div id="winloss">
 	<h2 id="battleshipWins"></h2>
 	<h2 id="spaceInvadersWins"></h2>
+	<h2 id="sudokusCompleted"></h2>
 </div>
 
 <body>
