--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 	</div>
 	<footer>
 		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: July 6, 2020</p>
+		<p id="updateText">Last Updated: July 23, 2020</p>
 		<div id="darkMode">Dark Mode</div>
 	</footer>
 </body>
+<script type="text/javascript" src="https://marusczak.com/BuildingBlocks/buildingBlocks.min.js"></script>
 <script type="text/javascript" src="home.js"></script>
 
 </html>
