new link to connect 4

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<p class="linkText">Sudoku</p>
 			</div>
 		</a>
-		<a href="https://marusczak.com/Connect-Four/">
+		<a href="https://marusczak.com/Connect-Four-MinMax/">
 			<div class="linkBox" id="connect4">
 				<p class="linkText">Connect Four</p>
 			</div>
@@ -56,7 +56,7 @@
 	</div>
 	<footer>
 		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: July 23, 2020</p>
+		<p id="updateText">Last Updated: September 27, 2020</p>
 		<div id="darkMode">Dark Mode</div>
 	</footer>
 </body>
