--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header>
 		<h1 id="welcome">Games Home Page</h1>
 		<a id="gitHubLink" href="https://github.com/ShaneMarusczak/Games-Home-Page" target="_blank"
-			rel="noreferrer"><img id="githubicon" src="github-icon.jpg"></a>
+			rel="noreferrer"><img id="githubicon" src="github-icon.png"></a>
 	</header>
 	<div id="main">
 		<a href="https://marusczak.com/Battleship-JS/">
@@ -56,7 +56,7 @@
 	</div>
 	<footer>
 		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: September 27, 2020</p>
+		<p id="updateText">Last Updated: October 7, 2020</p>
 		<div id="darkMode">Dark Mode</div>
 	</footer>
 </body>
