new linter and minifier

--- a/index.html
+++ b/index.html
@@ -1,66 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="style.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description" content="Home page for all my games!" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>Games Home Page</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="style.min.css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="Description" content="Home page for all my games!">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-	<title>Games Home Page</title>
-</head>
-
-
-<body>
-	<header>
-		<h1 id="welcome">Games Home Page</h1>
-		<a id="gitHubLink" href="https://github.com/ShaneMarusczak/Games-Home-Page" target="_blank"
-			rel="noreferrer"><img id="githubicon" src="github-icon.png"></a>
-	</header>
-	<div id="main">
-		<a href="https://marusczak.com/Battleship-JS/">
-			<div class="linkBox" id="battleship">
-				<p class="linkText">Battleship</p>
-			</div>
-		</a>
-		<a href="https://marusczak.com/Space-Invaders/">
-			<div class="linkBox" id="spaceinvaders">
-				<p class="linkText">Space Invaders</p>
-			</div>
-		</a>
-		<a href="https://marusczak.com/Connect-Four-MinMax/">
-			<div class="linkBox" id="connect4">
-				<p class="linkText">Connect Four</p>
-			</div>
-		</a>
-		<a href="https://marusczak.com/Sudoku-Game/">
-			<div class="linkBox" id="sudoku">
-				<p class="linkText">Sudoku</p>
-			</div>
-		</a>
-		<a href="https://marusczak.com/Sudoku-Solver/">
-			<div class="linkBox" id="sudokusolver">
-				<p class="linkText">Sudoku Solver</p>
-			</div>
-		</a>
-		<a href="https://marusczak.com/Battleship-JS-Analysis">
-			<div class="linkBox" id="battleshipAnalysis">
-				<p class="linkText">Battleship Analysis</p>
-			</div>
-		</a>
-		<div id="winloss">
-			<h2 id="battleshipWins"></h2>
-			<h2 id="spaceInvadersWins"></h2>
-			<h2 id="sudokusCompleted"></h2>
-		</div>
-	</div>
-	<footer>
-		<h2 id="thanks">Thanks for stopping by!</h2>
-		<p id="updateText">Last Updated: October 7, 2020</p>
-		<div id="darkMode">Dark Mode</div>
-	</footer>
-</body>
-<script type="text/javascript" src="https://marusczak.com/BuildingBlocks/js/buildingBlocks.min.js"></script>
-<script type="text/javascript" src="home.js"></script>
-
+  <body>
+    <header>
+      <h1 id="welcome">Games Home Page</h1>
+      <a
+        id="gitHubLink"
+        href="https://github.com/ShaneMarusczak/Games-Home-Page"
+        target="_blank"
+        rel="noreferrer"
+        ><img id="githubicon" src="github-icon.png"
+      /></a>
+    </header>
+    <div id="main">
+      <a href="https://marusczak.com/Battleship-JS/">
+        <div class="linkBox" id="battleship">
+          <p class="linkText">Battleship</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/Space-Invaders/">
+        <div class="linkBox" id="spaceinvaders">
+          <p class="linkText">Space Invaders</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/Connect-Four-MinMax/">
+        <div class="linkBox" id="connect4">
+          <p class="linkText">Connect Four</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/Sudoku-Game/">
+        <div class="linkBox" id="sudoku">
+          <p class="linkText">Sudoku</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/Sudoku-Solver/">
+        <div class="linkBox" id="sudokusolver">
+          <p class="linkText">Sudoku Solver</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/Battleship-JS-Analysis">
+        <div class="linkBox" id="battleshipAnalysis">
+          <p class="linkText">Battleship Analysis</p>
+        </div>
+      </a>
+      <div id="winloss">
+        <h2 id="battleshipWins"></h2>
+        <h2 id="spaceInvadersWins"></h2>
+        <h2 id="sudokusCompleted"></h2>
+      </div>
+    </div>
+    <footer>
+      <h2 id="thanks">Thanks for stopping by!</h2>
+      <p id="updateText">Last Updated: October 7, 2020</p>
+      <div id="darkMode">Dark Mode</div>
+    </footer>
+  </body>
+  <script
+    type="text/javascript"
+    src="https://marusczak.com/BuildingBlocks/js/buildingBlocks.min.js"
+  ></script>
+  <script type="text/javascript" src="home.js"></script>
 </html>
