file structure and minify

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="style.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Description" content="Home page for all my games!" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -17,7 +17,7 @@
         href="https://github.com/ShaneMarusczak/Games-Home-Page"
         target="_blank"
         rel="noreferrer"
-        ><img id="githubicon" src="github-icon.png"
+        ><img id="githubicon" src="images/github-icon.png"
       /></a>
     </header>
     <div id="main">
@@ -67,5 +67,5 @@
     type="text/javascript"
     src="https://marusczak.com/BuildingBlocks/js/buildingBlocks.min.js"
   ></script>
-  <script type="text/javascript" src="home.js"></script>
+  <script type="text/javascript" src="js/home.min.js"></script>
 </html>
