--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           <p class="linkText">Sudoku</p>
         </div>
       </a>
+      <a href="https://marusczak.com/Tetris/">
+        <div class="linkBox" id="tetris">
+          <p class="linkText">Tetris</p>
+        </div>
+      </a>
+
       <a href="https://marusczak.com/Sudoku-Solver/">
         <div class="linkBox" id="sudokusolver">
           <p class="linkText">Sudoku Solver</p>
@@ -59,7 +65,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText">Last Updated: October 7, 2020</p>
+      <p id="updateText">Last Updated: December 1, 2020</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
