--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
           <p class="linkText">Tetris</p>
         </div>
       </a>
-
+      <a href="https://marusczak.com/<Conc></Conc>/">
+        <div class="linkBox" id="concentration">
+          <p class="linkText">Concentration</p>
+        </div>
+      </a>
       <a href="https://marusczak.com/Sudoku-Solver/">
         <div class="linkBox" id="sudokusolver">
           <p class="linkText">Sudoku Solver</p>
@@ -65,7 +69,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText">Last Updated: December 1, 2020</p>
+      <p id="updateText">Last Updated: May 5, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
