--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p class="linkText">Tetris</p>
         </div>
       </a>
-      <a href="https://marusczak.com/<Conc></Conc>/">
+      <a href="https://marusczak.com/Concentration/">
         <div class="linkBox" id="concentration">
           <p class="linkText">Concentration</p>
         </div>
