--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Description" content="Home page for all my games!" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <title>Games Home Page</title>
   </head>
 
@@ -64,7 +67,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText">Last Updated: May 5, 2021</p>
+      <p id="updateText" title="5:09 PM">Last Updated: July 18, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
