adding conways game of life

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
           <p class="linkText">Concentration</p>
         </div>
       </a>
+      <a href="https://marusczak.com/Game-of-Life/">
+        <div class="linkBox" id="concentration">
+          <p class="linkText">Conway's Game of Life</p>
+        </div>
+      </a>
       <a href="https://marusczak.com/Sudoku-Solver/">
         <div class="linkBox" id="sudokusolver">
           <p class="linkText">Sudoku Solver</p>
@@ -67,7 +72,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="5:09 PM">Last Updated: July 18, 2021</p>
+      <p id="updateText" title="3:27 PM">Last Updated: July 19, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
