--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -72,7 +78,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="3:27 PM">Last Updated: July 19, 2021</p>
+      <p id="updateText" title="4:05 PM">Last Updated: August 7, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
