--- a/index.html
+++ b/index.html
@@ -61,8 +61,18 @@
         </div>
       </a>
       <a href="https://marusczak.com/Game-of-Life/">
-        <div class="linkBox" id="concentration">
+        <div class="linkBox" id="conways">
           <p class="linkText">Conway's Game of Life</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/Space-Image-of-the-Day/">
+        <div class="linkBox" id="space">
+          <p class="linkText">Space Image of the Day</p>
+        </div>
+      </a>
+      <a href="https://marusczak.com/HandWrittenDigitsIdentifier/">
+        <div class="linkBox" id="hand">
+          <p class="linkText">Handwriten Digits Identifier</p>
         </div>
       </a>
       <a href="https://marusczak.com/Sudoku-Solver/">
@@ -78,7 +88,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="4:05 PM">Last Updated: August 7, 2021</p>
+      <p id="updateText" title="12:00 PM">Last Updated: August 26, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
