--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </a>
       <a href="https://marusczak.com/HandWrittenDigitsIdentifier/">
         <div class="linkBox" id="hand">
-          <p class="linkText">Handwriten Digits Identifier</p>
+          <p class="linkText">Handwritten Digits Identifier</p>
         </div>
       </a>
       <a href="https://marusczak.com/Sudoku-Solver/">
