--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
           <p class="linkText">Concentration</p>
         </div>
       </a>
+      <a href="https://marusczak.com/Minesweeper/">
+        <div class="linkBox" id="minesweeper">
+          <p class="linkText">Minesweeper</p>
+        </div>
+      </a>
       <a href="https://marusczak.com/Game-of-Life/">
         <div class="linkBox" id="conways">
           <p class="linkText">Conway's Game of Life</p>
@@ -88,7 +93,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="12:00 PM">Last Updated: August 26, 2021</p>
+      <p id="updateText" title="6:11 PM">Last Updated: October 3, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
