removing building blocks

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         href="https://github.com/ShaneMarusczak/Games-Home-Page"
         target="_blank"
         rel="noreferrer"
-        ><img id="githubicon" src="images/github-icon.png"
+        ><img id="githubicon" src="images/github-icon.png" alt="github"
       /></a>
     </header>
     <div id="main">
@@ -93,13 +93,9 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="6:11 PM">Last Updated: October 3, 2021</p>
+      <p id="updateText" title="7:38 AM">Last Updated: December 10, 2021</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
-  <script
-    type="text/javascript"
-    src="https://marusczak.com/BuildingBlocks/js/buildingBlocks.min.js"
-  ></script>
   <script type="text/javascript" src="js/home.min.js"></script>
 </html>
