adding in maze solver

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
           <p class="linkText">Minesweeper</p>
         </div>
       </a>
+      <a href="https://marusczak.com/Maze-Solver/">
+        <div class="linkBox" id="mazesolver">
+          <p class="linkText">Maze Solver</p>
+        </div>
+      </a>
       <a href="https://marusczak.com/Game-of-Life/">
         <div class="linkBox" id="conways">
           <p class="linkText">Conway's Game of Life</p>
@@ -93,7 +98,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="7:38 AM">Last Updated: December 10, 2021</p>
+      <p id="updateText" title="12:21 PM">Last Updated: January 4, 2022</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
