--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       /></a>
     </header>
     <div id="main">
+      <a href="https://marusczak.com/Tanks/">
+        <div class="linkBox" id="tanks">
+          <p class="linkText">Tanks</p>
+        </div>
+      </a>
       <a href="https://marusczak.com/Battleship-JS/">
         <div class="linkBox" id="battleship">
           <p class="linkText">Battleship</p>
@@ -98,7 +103,7 @@
     </div>
     <footer>
       <h2 id="thanks">Thanks for stopping by!</h2>
-      <p id="updateText" title="12:21 PM">Last Updated: January 4, 2022</p>
+      <p id="updateText" title="3:28 PM">Last Updated: January 22, 2023</p>
       <div id="darkMode">Dark Mode</div>
     </footer>
   </body>
